[gd_scene load_steps=9 format=3 uid="uid://drmfv1ovtkist"]

[ext_resource type="Script" path="res://scripts/player02.gd" id="1_r6n21"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rbtpl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6r28l"]
height = 1.2

[sub_resource type="Animation" id="Animation_24734"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck/head/eyes/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_p04rj"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0523599, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck/head/eyes/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xwh5g"]
resource_name = "landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0523599, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck/head/eyes/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hs1st"]
resource_name = "roll"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("neck/head/eyes/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-3.14159, 0, 0.0349066), Vector3(-6.28319, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("neck/head/eyes/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8a1l"]
_data = {
"RESET": SubResource("Animation_24734"),
"jump": SubResource("Animation_p04rj"),
"landing": SubResource("Animation_xwh5g"),
"roll": SubResource("Animation_hs1st")
}

[node name="Player" type="CharacterBody3D" groups=["Climber", "Player"]]
script = ExtResource("1_r6n21")

[node name="Standing_CollisionShape3D" type="CollisionShape3D" parent="." groups=["Climber"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_rbtpl")

[node name="Crouching_CollisionShape3D" type="CollisionShape3D" parent="." groups=["Climber"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_6r28l")

[node name="RayCast3D_Up" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="RayCast3D_Front" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.2, 0)
target_position = Vector3(0, 0.75, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="RayCast3D_Down" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.5, 0)
debug_shape_custom_color = Color(0.952941, 0, 0, 1)

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="head" type="Node3D" parent="neck"]

[node name="eyes" type="Node3D" parent="neck/head"]

[node name="Camera3D" type="Camera3D" parent="neck/head/eyes"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="neck/head/eyes"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_l8a1l")
}
